Thu Aug  2 02:32:00 2013  Kenta Murata  <mrkn@mrkn.jp>

	* NEWS: Add the description of number literal suffixes.

Thu Aug  2 00:02:00 2013  Kenta Murata  <mrkn@mrkn.jp>

	* bootstraptest/test_literal_suffix.rb: add two test cases to
	  examine that "1if true" and "1rescue nil" are recognized as 1.

Thu Aug  1 23:45:00 2013  Kenta Murata  <mrkn@mrkn.jp>

	* rational.c (rb_flt_rationalize_with_prec): new public C function
	  to rationalize a Float instance with a precision.

	* rational.c (rb_flt_rationalize): new public C function to
	 rationalize a Float instance.  A precision is calculated from
	 the given float number.

	* include/ruby/intern.h: Add rb_flt_rationalize_with_prec and
	  rb_flt_rationalize.

	* parse.y: implement number literal suffixes, 'r' and 'i'.
	  [ruby-core:55096] [Feature #8430]

	* bootstraptest/test_literal_suffix.rb: add tests for parser to scan
	  number literals with the above tsuffixes.

Thu Aug  1 23:55:08 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_big2str1): Remove a local variable.

Thu Aug  1 23:33:01 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_cstr_to_inum): Use power_cache_get_power.

Thu Aug  1 21:02:48 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_big2str1): Raise an error for too big number.

Thu Aug  1 20:46:29 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (power_cache_get_power): Hide cached Bignum objects.

Thu Aug  1 19:15:05 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_big2str1): Remove non-trim mode.
	  (rb_big2str0): Non-trim mode implemented here.
	  (big2str_find_n1): Change the result type to long again.
	  (big2str_base_powerof2): Don't take arguments: len and trim.
	  (rb_big2str): Follow above change.

Thu Aug  1 12:37:58 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (big2str_alloc): New function to allocate the result string.
	  It is called after actual length is calculated.
	  (big2str_struct): Add fields: negative, result and ptr.